# SudokuSolver

./: .gitignore  CMakeLists.txt  LICENSE  README.md
files/: NN_matrices_camera.xml  NN_matrices_image.xml
include/: DigitRecognizer.hpp  SudokuDetection.hpp  SudokuSolver.hpp
src/: DigitRecognizer.cpp  SudokuDetection.cpp  SudokuSolver.cpp  main.cpp
